fix input zoom and blurry logo

--- a/src/app.css
+++ b/src/app.css
@@ -21,7 +21,7 @@ body {
   font-weight: 300;
   padding: 0;
   margin: 0;
-  color: #1F1D1D;
+  color: #1f1d1d;
 }
 
 button {
@@ -29,7 +29,7 @@ button {
   font-weight: 300;
   font-family: inherit;
   cursor: pointer;
-  color: #1F1D1D;
+  color: #1f1d1d;
 }
 /* button:hover {
   scale: 1.5;
@@ -48,5 +48,10 @@ button:focus-visible {
 @media (max-width: 49em) {
   html {
     font-size: 40%;
+  }
+  input,
+  select,
+  textarea {
+    font-size: 16px;
   }
 }
